--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -13,7 +13,7 @@
     background-size: cover;
     background-position: center;
     margin: 0;
-    position: relative;
+    /* position: relative; */
     z-index: 0;
 }
 
