Commented out top margin 1% as it makes page too tall on some monitors

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -122,7 +122,7 @@ body {
 
     .mainContentContainer > .loginContainer > .loginLogo {
         width: 40%;
-        margin-top: 1%;
+        /* margin-top: 1%; */
     }
 
     .mainContentContainer > .loginContainer > .loginSlogan {
