--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -91,8 +91,7 @@ body {
     margin-bottom: 2vh;
 }
 
-@media all and (min-width: 600px) {
-    
+@media all and (min-width: 600px) {    
     .mainContentContainer {
         display: flex;
         height: 100vh;
@@ -122,7 +121,7 @@ body {
 
     .mainContentContainer > .loginContainer > .loginLogo {
         width: 40%;
-        /* margin-top: 1%; */
+        margin-top: 1%;
     }
 
     .mainContentContainer > .loginContainer > .loginSlogan {
