changed loginLogo padding to 6% as it did not fit mobile due to register length

--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -39,7 +39,8 @@
 }
 
 .loginLogo {
-    padding-top: 35%;
+    /* padding-top: 35%; */
+    padding-top: 6%;
     margin: 0 auto;
     width: 80%;
 }
