finished media queries for diet-selection, allergy-selection, reg-confirm

--- a/client/src/assets/css/allergy-selection.css
+++ b/client/src/assets/css/allergy-selection.css
@@ -53,7 +53,8 @@
     div.allergyContainer > div.container > div.row > div > a.btn-large,
     div.allergySettingsContainer > div.container > div.row > div > a.btn-large {
         height: 6.9vh;  
-        margin: 1vh .5vh;      
+        margin: 1vh .5vh; 
+        padding: 0 1rem;      
     }
     
     .allergyContainer > .container > .row > div > .btn-desk > div > div.title-container {
@@ -64,4 +65,71 @@
         height: 8.5vh;
         margin-right: 5vh;
     }
+
+    div.regConfirmContainer > div.container > div.regConfirmButtonContainer > a.btn-large,
+    div.regConfirmContainer > div.container > div.regConfirmButtonContainer > button.btn-large{
+        padding: 0 5%;
+        font-size:.9rem;
+    } 
 }
+
+@media all and (min-width: 768px) {
+    .allergyContainer {
+        width: 60%;
+    }
+    
+    div.allergyContainer > div.container > div.row > div > a.btn-large,
+    div.allergySettingsContainer > div.container > div.row > div > a.btn-large {
+        height: 6.9vh;  
+        margin: 1vh .5vh; 
+        padding: 0 1rem;     
+    }
+
+}
+
+@media all and (min-width:1024px) {
+    .allergyContainer {
+        width: 60%;
+    }
+    
+    div.allergyContainer > div.container > div.row > div > a.btn-large,
+    div.allergySettingsContainer > div.container > div.row > div > a.btn-large {
+        height: 5.9vh;  
+        margin: 1vh .5vh; 
+        padding: 0 .5rem;     
+    }
+    .allergyContainer > .container > .right > a > .container > button{
+        height:7.5vh;
+    }
+
+    div.regConfirmContainer > div.container > div.regConfirmButtonContainer > a.btn-large,
+    div.regConfirmContainer > div.container > div.regConfirmButtonContainer > button.btn-large{
+        padding: 0 5%;
+        font-size:.8rem;
+    } 
+}
+
+@media all and (min-width:1355px) {
+    .allergyContainer {
+        width: 60%;
+    }
+    
+    div.allergyContainer > div.container > div.row > div > a.btn-large,
+    div.allergySettingsContainer > div.container > div.row > div > a.btn-large {
+        height: 5.9vh;  
+        margin: 1vh .5vh; 
+        padding: 0 .5rem;     
+    }
+    .allergyContainer > .container > .right > a > .container > button{
+        height:7.5vh;
+    }
+
+    div.regConfirmContainer > div.container > div.regConfirmButtonContainer > a.btn-large,
+    div.regConfirmContainer > div.container > div.regConfirmButtonContainer > button.btn-large{
+        padding: 0 5%;
+        font-size:.8rem;
+    } 
+}
+/* @media all and (min-width:768px) {
+    
+} */
