--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -80,3 +80,33 @@
         margin-right: 5vh;
     }
 }
+
+@media all and (max-height: 445px){
+    .dietContainer > .container > .center-align > div > a {
+        height: 15px;
+        line-height: 20px;
+    }
+    .dietContainer > .container > .center-align > div > a > div > div:nth-child(2) {
+        display:none;
+    }
+}
+
+@media (min-width: 768px){
+    .dietContainer > .container > .center-align > div > a {
+        width: 33vh;
+        padding: 0;
+        margin: 1vh;
+        font-size: .7rem;
+        height: 72px;
+    }
+}
+
+@media (min-width: 1024px){
+    .dietContainer > .container > .center-align > div > a {
+        width: 27vh;
+        padding: 0;
+        margin: 1vh;
+        font-size: .7rem;
+    }
+}
+
