--- a/client/src/assets/css/allergy-selection.css
+++ b/client/src/assets/css/allergy-selection.css
@@ -107,6 +107,12 @@
         padding: 0 5%;
         font-size:.8rem;
     } 
+
+    .settingsOptionArea > .settingsButton{
+        padding: 0 25px;
+        font-size: 1rem;
+        line-height: 7vh;
+    }
 }
 
 @media all and (min-width:1355px) {
