--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -12,12 +12,9 @@ body {
 }
 
 .mainContentContainer {
-    height: 100vh;
-    width: 100vw;
     margin: 0;
-    min-height: 100vh;
-    max-height: 100vh;
     background-color: #757575;
+    min-height: 100vh;
 }
 
 .mainContentContainer > * {
@@ -29,6 +26,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     opacity: .6;
+    background-attachment: fixed;
 }
 
 .gutter-left {
@@ -72,16 +70,6 @@ body {
     width: 5vw;
 }
 
-.phonePls {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    z-index: 1000000;
-    color: white;
-    background-color: black;
-    font-size: 10vmin;
-}
-
 .phonePls > * {
     text-align: center;
     width: 100%;
@@ -94,9 +82,6 @@ body {
 @media all and (min-width: 600px) {    
     .mainContentContainer {
         display: flex;
-        height: 100vh;
-        width: 100vw;
-        overflow: auto;
     }
 
     .desktop-gutter {
