--- a/client/src/assets/css/general.css
+++ b/client/src/assets/css/general.css
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: relative;
+    position: fixed;
     z-index: 2;
 }
 
@@ -118,4 +118,7 @@
         font-size: 1.5rem !important;
     }
 
+    .headerBar {
+        width: 59.8%;
+    }
 }
