--- a/client/src/assets/css/meals.css
+++ b/client/src/assets/css/meals.css
@@ -19,14 +19,14 @@
 }
 
 .mealConfirmContainer {
-    height: 20%;
+    height: 13vh;
     width: 100%;
     position: relative;
     box-sizing: border-box;
 }
 
 .mealsItem {
-    height: 40%;
+    height: 30vh;
     width: 100%;
     position: relative;
     box-sizing: border-box;
@@ -78,6 +78,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     color: white;
 }
 
@@ -212,7 +213,7 @@ div.detailsInstructionsList > ul.collection {
     }
 
     .mealsContainer > .mealsMainArea > .mealConfirmContainer {
-        height: 48%;
+        height: 35vh;
         align-items: center;
     }
 
@@ -248,7 +249,7 @@ div.detailsInstructionsList > ul.collection {
     }
 
     .mealsItem {
-        height: 31vh;
+        height: 35vh;
     }
 
     .mealsCancel {
@@ -299,7 +300,7 @@ div.detailsInstructionsList > ul.collection {
     
     .mealsContainer > .mealsMainArea > .tripleMeal {
         width: 100%;
-        height: 31vh;
+        height: 35vh;
     }
     
 }
