--- a/client/src/assets/css/grocery.css
+++ b/client/src/assets/css/grocery.css
@@ -1,6 +1,6 @@
 .groceryContainer {
     width: 100%;
-    margin: 0;
+    margin: 0 auto;
     text-align: center;
     font-size: 1rem;
     background-image: url('../../assets/images/dingHDBack_Dark.jpg');
