Updated all pages to work with new scroll style

--- a/client/src/assets/css/mealNumber.css
+++ b/client/src/assets/css/mealNumber.css
@@ -19,6 +19,8 @@
 }
 
 .mealNumContainer {
+    margin: 0 auto;
+    padding-top: 10vh;
     height: 100vh;
     background-image: url('../../assets/images/dingHDBack_Dark.jpg');
     background-position: center;
