--- a/client/src/assets/css/allergy-selection.css
+++ b/client/src/assets/css/allergy-selection.css
@@ -11,6 +11,8 @@
 }
 
 .allergyContainer {
+    margin: 0 auto;
+    padding-top: 10vh;
     height: 100vh;
     background-image: url('../../assets/images/dingHDBack_Dark.jpg');
     background-position: center;
