--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -3,6 +3,8 @@
 }
 
 .dietContainer {
+    margin: 0 auto;
+    padding-top: 10vh;
     height: 100vh;
     background-image: url('../../assets/images/dingHDBack_Dark.jpg');
     background-position: center;
