--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -6,14 +6,15 @@
 }
 
 .loginContainer {
+    min-height: 100vh;
     height: 100%;
     width: 100%;
     background-image: url('../../assets/images/dingHDBack.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    margin: 0;
-    /* position: relative; */
+    background-attachment: fixed;
+    margin: 0 auto;
     z-index: 1;
 }
 
@@ -92,6 +93,7 @@
 .validationText1 div {
     color: black;
     text-shadow: none;
+    z-index: 10;
 }
 
 .validationText2 {
@@ -139,6 +141,10 @@
 @media all and (min-width: 600px) {
     .loginContainer {
         width: 60%;
+    }
+
+    .validationText1, .validationText2 div {
+        font-size: 3vmin;
     }
 }
 
