--- a/client/src/assets/css/reg-confirm.css
+++ b/client/src/assets/css/reg-confirm.css
@@ -1,9 +1,10 @@
 
 .regConfirmContainer {
+    margin: 0 auto;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
+    padding-top: 10vh;
     font-size: 10vmin;
-    overflow: hidden;
     background-image: url('../../assets/images/dingHDBack_Dark.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -39,6 +40,10 @@
 }
 
 @media all and (min-width: 600px) {
+
+    .regConfirmContainer {
+        width: 60%;
+    }
     .regConfirmContainer > .container > .center > .card-content {
         font-size: 1.3rem;
     }
