Minor css fixes, checked modals for consistency

--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -83,6 +83,12 @@ body {
         display: flex;
     }
 
+    .mainContentContainer > * {
+        box-sizing: border-box;
+        border-left: 2px solid black;
+        border-right: 2px solid black;
+    }
+
     .desktop-gutter {
         width: 20%;
     }
