Minor CSS updates to all pages for review prep

--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -53,7 +53,7 @@
     }
 }
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 600px) and (orientation: landscape) {
     .dietContainer {
         width: 60%;
     }
