--- a/client/src/assets/css/allergy-selection.css
+++ b/client/src/assets/css/allergy-selection.css
@@ -47,7 +47,7 @@
     } 
 }
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 600px) and (orientation: landscape) {
     .allergyContainer {
         width: 60%;
     }
@@ -75,7 +75,7 @@
     } 
 }
 
-@media all and (min-width: 768px) {
+@media all and (min-width: 768px) and (orientation: landscape) {
     .allergyContainer {
         width: 60%;
     }
