--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -78,7 +78,7 @@ body {
     margin-bottom: 2vh;
 }
 
-@media all and (min-width: 600px) {    
+@media all and (min-width: 600px) and (orientation: landscape) {    
     .mainContentContainer {
         display: flex;
     }
@@ -115,7 +115,7 @@ body {
     }
 
     .mainContentContainer > .loginContainer > .loginSlogan {
-        margin: 0;
+        margin-bottom: 3%;
     }
 
     .mainContentContainer > .loginContainer > .loginButtons > input {
