--- a/client/src/assets/css/general.css
+++ b/client/src/assets/css/general.css
@@ -93,7 +93,7 @@
     transform: translate(-50%, -50%);
 }
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 600px) and (orientation: landscape) {
     .errorModalContent {
         top: 42%;
         width: 27%;
