--- a/client/src/assets/css/settings.css
+++ b/client/src/assets/css/settings.css
@@ -123,7 +123,7 @@
     }
 }
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 600px) and (orientation: landscape) {
     .allergySettingsContainer > .filterModalBackdrop > .filterModal {
         height: 500px;
         width: 500px;
@@ -231,7 +231,7 @@
     } 
 }
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 600px) and (orientation: landscape) {
     .allergyContainer, .allergySettingsContainer {
         width: 60%;
     }
