Updated all pages based on mentor suggestions

--- a/client/src/assets/css/reg-confirm.css
+++ b/client/src/assets/css/reg-confirm.css
@@ -39,6 +39,12 @@
     height: 10%;
 }
 
+@media all and (min-height: 590px) and (max-height: 590px) {
+    .regConfirmContainer {
+        height: 105vh;
+    }
+}
+
 @media all and (min-width: 600px) and (orientation: landscape) {
 
     .regConfirmContainer {
