--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -12,6 +12,12 @@
     background-size: cover;
 }
 
+@media all and (min-height: 590px) and (max-height: 590px) {
+    .dietContainer {
+        height: 106vh;
+    }
+}
+
 @media only screen and (min-width: 992px) {
     .collection {
         display: flex;
