--- a/client/src/assets/css/grocery.css
+++ b/client/src/assets/css/grocery.css
@@ -61,6 +61,11 @@ label::after {
     margin-top: 2.5%;
 }
 
+.checkbox-grey[type="checkbox"].filled-in:not(:checked)+label::after, .checkbox-grey[type="checkbox"].filled-in:checked+label::after {
+    background-color: #757575;
+    border-color: #757575;
+}
+
 .card-content {
     text-shadow: 2px 2px 2px black;
 }
