--- a/client/src/assets/css/diet-selection.css
+++ b/client/src/assets/css/diet-selection.css
@@ -109,6 +109,15 @@
     }
 }
 
+@media (min-width: 980px){
+    .dietContainer > .container > .center-align > div > a {
+        width: 45vh;
+        padding: 0;
+        margin: 1vh;
+        font-size: .7rem;
+    }
+}
+
 @media (min-width: 1024px){
     .dietContainer > .container > .center-align > div > a {
         width: 27vh;
