Updated cursor on meals

--- a/client/src/assets/css/meals.css
+++ b/client/src/assets/css/meals.css
@@ -296,6 +296,7 @@ div.detailsInstructionsList > ul.collection {
 
     .mealsItem {
         height: 35vh;
+        cursor: pointer;
     }
 
     .mealsCancel {
