Fixed reg confirm button text moving to extra lines

--- a/client/src/assets/css/reg-confirm.css
+++ b/client/src/assets/css/reg-confirm.css
@@ -18,6 +18,10 @@
     margin-top: 10%;
 }
 
+.regConfirmButtonContainer > * {
+    white-space: nowrap;
+}
+
 .regConfirmHeader {
     margin: 10% 0;
 }
