--- a/client/src/assets/css/allergy-selection.css
+++ b/client/src/assets/css/allergy-selection.css
@@ -13,7 +13,7 @@
 .allergyContainer {
     margin: 0 auto;
     padding-top: 10vh;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url('../../assets/images/dingHDBack_Dark.jpg');
     background-position: center;
     background-repeat: no-repeat;
