--- a/client/src/assets/css/reg-confirm.css
+++ b/client/src/assets/css/reg-confirm.css
@@ -1,7 +1,7 @@
 
 .regConfirmContainer {
     margin: 0 auto;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     padding-top: 10vh;
     font-size: 10vmin;
