Updated register process buttons to properly fit

--- a/client/src/assets/css/general.css
+++ b/client/src/assets/css/general.css
@@ -109,6 +109,10 @@
     align-items: center;
 }
 
+.nextButton {
+    padding-bottom: 50px;
+}
+
 @media all and (min-width: 600px) and (orientation: landscape) {
     .errorModalContent {
         top: 42%;
