--- a/client/src/assets/css/reg-confirm.css
+++ b/client/src/assets/css/reg-confirm.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 10%;
+    padding-bottom: 50px;
 }
 
 .regConfirmButtonContainer > * {
