Fixed background for diet/allergy pages

--- a/client/src/assets/css/allergy-selection.css
+++ b/client/src/assets/css/allergy-selection.css
@@ -20,6 +20,11 @@
     background-size: cover;
 }
 
+.nextHolder {
+    display: flex;
+    justify-content: space-between;
+}
+
 @media screen and (max-height: 568px) {
     div.allergyContainer > div.container > div.row > div > a.btn-large,
     div.allergySettingsContainer > div.container > div.row > div > a.btn-large {
