--- a/client/src/assets/css/reg-confirm.css
+++ b/client/src/assets/css/reg-confirm.css
@@ -21,6 +21,9 @@
 
 .regConfirmButtonContainer > * {
     white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip;
+    text-shadow: 1px 2px 2px black;
 }
 
 .regConfirmHeader {
